begin login form

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     
+    <form id="formLogin">
+        <input type="text" placeholder="username" name="username">
+        <input type="password" placeholder="password" name="password">
+        <input type="submit" value="LOGIN">
+    </form>
+
     <div id="map"></div>
 
     <script src="dist/assets/js/jquery-3.3.1.min.js"></script>
